# rust-backend-monitor

./: .env.example  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2021-03-15-113456_add_external_monitor_table/: down.sql  up.sql
migrations/2021-03-15-114746_add_monitor_table/: down.sql  up.sql
migrations/2021-03-15-141242_add_command_table/: up.sql
migrations/2021-03-16-110908_add_status_table/: up.sql
scripts/: run.sh
src/: backend.rs  daemon.rs  error.rs  lib.rs  main.rs  routes.rs  schema.rs  types.rs
