[package]
name = "rbm"
version = "0.1.0"
authors = ["Alexis Le Provost <alexis.le-provost@ledger.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# RestFUL API server
actix-web = "3"
actix = "0.10"
# Type-safe CLI parser
structopt = "0.3.21"
# For connection with the MySQL database
diesel = { version = "1.4.6", features = ["mysql", "extras"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
# Powerful date and time functionality
chrono = { version = "0.4.19", features = ["serde"] }
# Monitor dependencies
reqwest = { version = "0.11.2", features = ["blocking"] }
ssl-expiration = "0.1.2"
dns-lookup = "1.0.5"
fastping-rs = "0.2.2"
url = "2.2.1"
# Serialization / deserialization
serde = "1.0.124"
serde_json = "1.0.64"
# Error management
thiserror = "1.0.24"
# Journalization
env_logger = "0.8"
log = "0.4.14"
# Recurring task scheduler
clokwerk = "0.3.4"
